finalisation du projet V1

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
     <!-- HEADER -->
     <header>
       <!-- Logotype -->
-      <img src="./images/logo-bloom.png" />
+      <a href="index.html"><img src="./images/logo-bloom.png" /></a>
       <!-- Navigation -->
       <nav>
         <ul class="menu">
-          <li><a href="#">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
-          <li><a href="#">Nos réalisations</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="realisations.html">Nos réalisations</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -38,7 +38,9 @@
       <section class="section1">
         <div class="cta">
           <p class="slogan">Des émotions en bouquet</p>
-          <a class="bouton box-center" href="#">Nouvelle collection</a>
+          <a class="bouton box-center" href="realisations.html"
+            >Nouvelle collection</a
+          >
         </div>
       </section>
 
@@ -71,7 +73,7 @@
               clients. pour concevoir des arrangements sur mesure, adaptés à
               leurs goûts et à l'ambiance de l'événement.
             </p>
-            <a href="#">En savoir plus</a>
+            <a href="realisations.html">En savoir plus</a>
           </div>
 
           <div class="card">
@@ -87,7 +89,7 @@
               livraison, l'installation et la décoration sur place pour garantir
               une expérience sans stress pour nos clients.
             </p>
-            <a href="#">En savoir plus</a>
+            <a href="realisations.html">En savoir plus</a>
           </div>
 
           <div class="card">
@@ -105,7 +107,7 @@
               privées. Les participants repartent avec leurs créations florales
               uniques et des souvenirs mémorables de l'atelier.
             </p>
-            <a href="#">En savoir plus</a>
+            <a href="realisations.html">En savoir plus</a>
           </div>
         </div>
       </section>
@@ -113,10 +115,10 @@
     <footer class="box-center" id="monFooter">
       <nav>
         <ul class="menu">
-          <li><a href="#">Accueil</a></li>
+          <li><a href="index.html">Accueil</a></li>
           <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
-          <li><a href="#">Nos réalisations</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="realisations.html">Nos réalisations</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </footer>
