--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -19,13 +19,13 @@
   <body>
     <!-- HEADER -->
     <header>
-      <img src="./images/logo-bloom.png" />
+      <a href="index.html"><img src="./images/logo-bloom.png" /></a>
       <nav>
         <ul class="menu">
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="#">Qui sommes-nous</a></li>
-          <li><a href="#">Nos réalisations</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
+          <li><a href="realisations.html">Nos réalisations</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </header>
@@ -59,36 +59,41 @@
         </p>
 
         <h3>Pourquoi Choisir BloomPetals ?</h3>
-        <ul>
-          <li>
-            <strong>Créativité Illimitée :</strong> des bouquets uniques et
-            magiques pour chaque événement.
-          </li>
-          <li>
-            <strong>Fleurs Fraîches et Durables :</strong> qualité premium pour
-            une tenue longue durée.
-          </li>
-          <li>
-            <strong>Service Personnalisé :</strong> à votre écoute pour un
-            résultat sur-mesure.
-          </li>
-          <li>
-            <strong>Ponctualité et Professionnalisme :</strong> une livraison
-            fiable, un service impeccable.
-          </li>
-        </ul>
+        <div class="sous-section">
+          <img src="./images/photo4.jpg" alt="" />
+          <div>
+            <ul>
+              <li>
+                <strong>Créativité Illimitée :</strong> des bouquets uniques et
+                magiques pour chaque événement.
+              </li>
+              <li>
+                <strong>Fleurs Fraîches et Durables :</strong> qualité premium
+                pour une tenue longue durée.
+              </li>
+              <li>
+                <strong>Service Personnalisé :</strong> à votre écoute pour un
+                résultat sur-mesure.
+              </li>
+              <li>
+                <strong>Ponctualité et Professionnalisme :</strong> une
+                livraison fiable, un service impeccable.
+              </li>
+            </ul>
 
-        <p>
-          Faites de votre prochain événement un moment inoubliable avec
-          BloomPetals. Laissez-nous transformer votre espace en un véritable
-          jardin de féerie, où chaque pétale raconte une histoire d'amour, de
-          bonheur et de célébration.
-        </p>
+            <p>
+              Faites de votre prochain événement un moment inoubliable avec
+              BloomPetals. Laissez-nous transformer votre espace en un véritable
+              jardin de féerie, où chaque pétale raconte une histoire d'amour,
+              de bonheur et de célébration.
+            </p>
+          </div>
+        </div>
       </section>
 
       <!-- SECTION EQUIPE -->
       <section class="section3">
-        <h2>Rencontrez notre équipe</h2>
+        <h1>Rencontrez notre équipe</h1>
         <div class="parent-cards">
           <div class="card">
             <img src="./images/photo1.jpg" alt="Membre équipe 1" />
@@ -122,9 +127,9 @@
       <nav>
         <ul class="menu">
           <li><a href="index.html">Accueil</a></li>
-          <li><a href="#">Qui sommes-nous</a></li>
-          <li><a href="#">Nos réalisations</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="qui-sommes-nous.html">Qui sommes-nous</a></li>
+          <li><a href="realisations.html">Nos réalisations</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
       </nav>
     </footer>
